[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jam_types"
version = "0.1.1"
description = "A Python package for JAM Types"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Davide Galassi", email = "davxy@datawok.net"},
]

dependencies = [
    "scalecodec @ git+https://github.com/davxy/scale-codec-py@extended",
    # "scalecodec @ file:///mnt/ssd/develop/misc/scale-codec-py"
]
